--- a/resources/assets/admin/src/stylus/main.styl
+++ b/resources/assets/admin/src/stylus/main.styl
@@ -1,4 +1,3 @@
-// // import './../../../../../node_modules/vuetify/src/stylus/main';
-// @import 'index.styl'
 
 @import '~vuetify/src/stylus/main'
+@import "vue-multiselect.min.css"
