video and audio file preview

--- a/resources/assets/admin/src/stylus/main.styl
+++ b/resources/assets/admin/src/stylus/main.styl
@@ -2,6 +2,7 @@
 @import '~vuetify/src/stylus/main'
 @import "vue-multiselect.min.css"
 @import '~dropzone/dist/dropzone.css';
+@import '~plyr/dist/plyr.css';
 *,
 *::before,
 *::after {
