--- a/resources/assets/admin/src/stylus/main.scss
+++ b/resources/assets/admin/src/stylus/main.scss
@@ -1,8 +1,9 @@
 
-@import '~vuetify/src/stylus/main'
-@import "vue-multiselect.min.css"
-@import '~dropzone/dist/dropzone.css';
-@import '~plyr/dist/plyr.css';
+
+// @import '~vuetify/src/styles/main.sass';
+@import  './vue-multiselect.min.css';
+@import  '~dropzone/dist/dropzone.css';
+@import  '~plyr/dist/plyr.css';
 *,
 *::before,
 *::after {
