Fixed some issue

--- a/resources/assets/admin/src/sass/main.scss
+++ b/resources/assets/admin/src/sass/main.scss
@@ -3,7 +3,7 @@
 @import '~vuetify/src/styles/main.sass';
 @import  '~vue-multiselect/dist/vue-multiselect.min.css';
 @import  '~dropzone/dist/dropzone.css';
-@import  '~/plyr/dist/plyr.css';
+@import  '~plyr/dist/plyr.css';
 
 @import "dropzone";
 
